src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>S40TotalCount__c</fullName>
        <label>S40 Total Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>Installation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S40_Notice_Count__c</fullName>
        <label>S40 Notice Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Installation_Date_S40__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S40_Scheduled_Date__c</fullName>
        <label>S40 Scheduled Date</label>
        <summarizedField>WorkOrderLineItem.Installation_Date_S40__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>Installation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Installation_Date_S40__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S40_notice_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Order Notice Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S41LSPNoticeCount__c</fullName>
        <label>S41 LSP Notice Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.DeInstallationDateS41__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.LeaveMachineAtCustomer__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S41LSPScheduledDate__c</fullName>
        <label>S41 LSP Scheduled Date</label>
        <summarizedField>WorkOrderLineItem.DeInstallationDateS41__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>De-Installation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.DeInstallationDateS41__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.LeaveMachineAtCustomer__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.PhysicalLocation__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S41NoticeCount__c</fullName>
        <label>S41 Notice Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.DeInstallationDateS41__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S41ScheduledDate__c</fullName>
        <label>S41 Scheduled Date</label>
        <summarizedField>WorkOrderLineItem.DeInstallationDateS41__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>De-Installation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.DeInstallationDateS41__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S43LSPNoticeCount__c</fullName>
        <label>S43 LSP Notice Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.ConfigurationDateS43__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.AddOption__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S43LSPScheduledDate__c</fullName>
        <label>S43 LSP Scheduled Date</label>
        <summarizedField>WorkOrderLineItem.ConfigurationDateS43__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>Configuration Change</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.ConfigurationDateS43__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.AddOption__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S43NoticeCount__c</fullName>
        <label>S43 Notice Count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.ConfigurationDateS43__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>equals</operation>
            <value>Scheduled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>S43ScheduledDate__c</fullName>
        <label>S43 Scheduled Date</label>
        <summarizedField>WorkOrderLineItem.ConfigurationDateS43__c</summarizedField>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>equals</operation>
            <value>Configuration Change</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.ConfigurationDateS43__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFDCOrderType__c</fullName>
        <label>SFDC Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZSER</fullName>
                </value>
                <value>
                    <fullName>ZOPR</fullName>
                </value>
                <value>
                    <fullName>ZINS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Date__c</fullName>
        <label>SLA Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScheduleNow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box which will be set to true when te sales trigger has run and schedule date can be calculated.</description>
        <label>Schedule Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduledInstallationDay__c</fullName>
        <formula>S40_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Installation Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceHours__c</fullName>
        <description>The calendar of the task (ex: Mon - Fri 09:00-17:00)</description>
        <label>Service Hours</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Maximum of 2 blocks per day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Actual Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SubstituteMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Machine is broken down and there is no alternative available for the customer</description>
        <label>Substitute Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Activity_Type__c</fullName>
        <label>Task Activity Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <description>assigned to third party, consists of small/cups/rinse</description>
        <inlineHelpText>indicator if task is assigned to third party resource and is not sent to Click</inlineHelpText>
        <label>Third Party?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_party_assigned__c</fullName>
        <label>Third party assigned</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkingOnSFDC__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNoticeCount__c</fullName>
        <formula>S40_Notice_Count__c +  S41NoticeCount__c +  S43NoticeCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Notice Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Start_Time__c</fullName>
        <label>Travel Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Travel_Stop_Time__c</fullName>
        <label>Travel Stop Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserTimezoneOffset__c</fullName>
        <formula>(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 00:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 01:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 02:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 03:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 04:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 05:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 06:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 07:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 08:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 09:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 10:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 11:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 12:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 13:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 14:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 15:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 16:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 17:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 18:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 19:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 20:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 21:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 22:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 23:00:00&quot;)) - TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserTimezoneOffset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOLI_count__c</fullName>
        <label>WOLI count</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>notEqual</operation>
            <value>Pick-Up/Drop Off, Pre-Visit Installation, After-Visit Installation, Assistance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WorkOrderExternalRef__c</fullName>
        <description>Serves as a foreign key for relating other objects in terms of executing DML statements</description>
        <externalId>true</externalId>
        <label>Work Order External Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderType__c</fullName>
        <label>Work Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S10</fullName>
                    <label>Corrective Maintenance</label>
                </value>
                <value>
                    <fullName>S15</fullName>
                    <label>1st Line Corrective Maintenance</label>
                </value>
                <value>
                    <fullName>S20</fullName>
                    <label>Machine Care</label>
                </value>
                <value>
                    <fullName>S30</fullName>
                    <label>Preventive Maintenance</label>
                </value>
                <value>
                    <fullName>S31</fullName>
                    <label>Preventive Check</label>
                </value>
                <value>
                    <fullName>S32</fullName>
                    <label>Water Filter Change</label>
                </value>
                <value>
                    <fullName>S40</fullName>
                    <label>Installation</label>
                </value>
                <value>
                    <fullName>S41</fullName>
                    <label>De-Installation</label>
                </value>
                <value>
                    <fullName>S42</fullName>
                    <label>Machine Movement</label>
                </value>
                <value>
                    <fullName>S43</fullName>
                    <label>Configuration Change</label>
                </value>
                <value>
                    <fullName>S50</fullName>
                    <label>Pick-Up/Drop Off</label>
                </value>
                <value>
                    <fullName>S51</fullName>
                    <label>Pre-Visit Installation</label>
                </value>
                <value>
                    <fullName>S52</fullName>
                    <label>After-Visit Installation</label>
                </value>
                <value>
                    <fullName>S53</fullName>
                    <label>Assistance</label>
                </value>
                <value>
                    <fullName>S60</fullName>
                    <label>Modification</label>
                </value>
                <value>
                    <fullName>S21</fullName>
                    <label>Counter Reading</label>
                </value>
                <value>
                    <fullName>S22</fullName>
                    <label>Counter Reading FUP</label>
                </value>
                <value>
                    <fullName>S25</fullName>
                    <label>RouteSales</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Working_in_Click_WOLI__c</fullName>
        <label># of Working in Click WOLI</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkingOnSFDC__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderLineItemType__c</field>
            <operation>equals</operation>
            <value>Task</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.WorkOrderType__c</field>
            <operation>notEqual</operation>
            <value>Pick-Up/Drop Off, Pre-Visit Installation, After-Visit Installation, Assistance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>All_Counter_Reading_FU_Today</fullName>
        <columns>Name</columns>
        <columns>OP_Physical_Asset__c</columns>
        <columns>WorkOrderType__c</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Account</columns>
        <columns>SalesOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WorkOrderType__c</field>
            <operation>equals</operation>
            <value>S22</value>
        </filters>
        <filters>
            <field>CreatedDate</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Counter Reading FU Today</label>
    </listViews>
    <listViews>
        <fullName>All_Counter_Readings</fullName>
        <columns>Name</columns>
        <columns>OP_Physical_Asset__c</columns>
        <columns>WorkOrderType__c</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Account</columns>
        <columns>SalesOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WorkOrderType__c</field>
            <operation>equals</operation>
            <value>S21,S22</value>
        </filters>
        <label>All Counter Readings</label>
    </listViews>
    <listViews>
        <fullName>All_Operating_Tasks</fullName>
        <columns>Name</columns>
        <columns>OP_Physical_Asset__c</columns>
        <columns>WorkOrderType__c</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Account</columns>
        <columns>SalesOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WorkOrderType__c</field>
            <operation>equals</operation>
            <value>S20</value>
        </filters>
        <label>All Operating Tasks</label>
    </listViews>
    <listViews>
        <fullName>All_Operating_Tasks_NORDICS</fullName>
        <columns>Name</columns>
        <columns>OP_Physical_Asset__c</columns>
        <columns>WorkOrderType__c</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Account</columns>
        <columns>SalesOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WorkOrderType__c</field>
            <operation>equals</operation>
            <value>S20</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Open,Scheduled,Dispatched</value>
        </filters>
        <filters>
            <field>SalesOrganization__c</field>
            <operation>equals</operation>
            <value>SAP_0975,SAP_6864</value>
        </filters>
        <filters>
            <field>CreatedDate</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All Operating Tasks NORDICS</label>
    </listViews>
    <listViews>
        <fullName>All_Operating_Tasks_Today</fullName>
        <columns>Name</columns>
        <columns>OP_Physical_Asset__c</columns>
        <columns>WorkOrderType__c</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Account</columns>
        <columns>SalesOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WorkOrderType__c</field>
            <operation>equals</operation>
            <value>S20</value>
        </filters>
        <filters>
            <field>CreatedDate</field>
            <operation>equals</operation>
            <value>5/10/2019 12:00 AM</value>
        </filters>
        <label>All Operating Tasks Today</label>
    </listViews>
    <listViews>
        <fullName>All_Route_Operating_Tasks</fullName>
        <columns>Name</columns>
        <columns>WorkOrderType__c</columns>
        <columns>Status</columns>
        <columns>SLA_Date__c</columns>
        <columns>Account_Location__c</columns>
        <columns>Actual_Duration__c</columns>
        <columns>Route_Id__c</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>WorkOrder.Operating_Route_Work_Order</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Route Operating Tasks</label>
    </listViews>
    <listViews>
        <fullName>All_Route_Operating_Tasks_NORDICS</fullName>
        <columns>Name</columns>
        <columns>WorkOrderType__c</columns>
        <columns>Status</columns>
        <columns>Early_Start_Date__c</columns>
        <columns>SLA_Date__c</columns>
        <columns>Account_Location__c</columns>
        <columns>Actual_Duration__c</columns>
        <columns>Route_Name__c</columns>
        <columns>CreatedDate</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>WorkOrder.Operating_Route_Work_Order</value>
        </filters>
        <filters>
            <field>SalesOrganization__c</field>
            <operation>equals</operation>
            <value>SAP_0975,SAP_6864</value>
        </filters>
        <label>All Route Operating Tasks NORDICS</label>
    </listViews>
    <listViews>
        <fullName>All_S22_FUP_This_Month</fullName>
        <columns>Name</columns>
        <columns>OP_Physical_Asset__c</columns>
        <columns>WorkOrderType__c</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>Account</columns>
        <columns>SalesOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WorkOrderType__c</field>
            <operation>equals</operation>
            <value>S22</value>
        </filters>
        <filters>
            <field>CreatedDate</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All S22 FUP This Month</label>
    </listViews>
    <listViews>
        <fullName>MTTO_Check</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Subject</columns>
        <columns>Status</columns>
        <columns>Priority</columns>
        <columns>Actual_Duration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>WorkOrder.Operating_Route_Work_Order</value>
        </filters>
        <label>MTTO Check</label>
    </listViews>
    <listViews>
        <fullName>NL_Routesales_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>NL  Routesales</label>
        <queue>NL_Routesales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Operating_Route_Work_Order</fullName>
        <active>true</active>
        <label>Operating (Route) Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operating_Work_Order</fullName>
        <active>true</active>
        <description>Operating: used as header for all Operating Tasks for a Customer</description>
        <label>Operating Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>TSWorkOrder</fullName>
        <active>true</active>
        <label>TS Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>WOCounter_Reading</fullName>
        <active>true</active>
        <label>Counter Reading</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>TS_CannotProvidebothOperators</fullName>
        <active>true</active>
        <description>You can only provide required operator or preferred operator, not both.</description>
        <errorConditionFormula>IF($Setup.ValidationRulesSettings__c.WorkOrderValidationsetting__c, 
RecordType.Name = &apos;Operating (Route) Work Order&apos; &amp;&amp;
NOT(ISBLANK(Preferred_Operator__c)) &amp;&amp;
NOT(ISBLANK(Required_Operator__c)), False)</errorConditionFormula>
        <errorMessage>You can only provide required operator or preferred operator, not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_Cannot_Change_to_Prev_WO_Status</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Setup.ValidationRulesSettings__c.WorkOrderValidationsetting__c, 
RecordType.Name == &apos;Operating (Route) Work Order&apos; &amp;&amp;
ISCHANGED(Status) &amp;&amp; 
OR(
ISPICKVAL(PRIORVALUE(Status),&quot;Completed&quot;) &amp;&amp; ISPICKVAL(Status,&quot;Canceled&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;Completed&quot;) &amp;&amp; ISPICKVAL(Status,&quot;Dispatched&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;Completed&quot;) &amp;&amp; ISPICKVAL(Status,&quot;Scheduled&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;Completed&quot;) &amp;&amp; ISPICKVAL(Status,&quot;Open&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;Canceled&quot;) &amp;&amp; ISPICKVAL(Status,&quot;Completed&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;Canceled&quot;) &amp;&amp; ISPICKVAL(Status,&quot;Dispatched&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;Canceled&quot;) &amp;&amp; ISPICKVAL(Status,&quot;Scheduled&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;Canceled&quot;) &amp;&amp; ISPICKVAL(Status,&quot;Open&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;Dispatched&quot;) &amp;&amp; ISPICKVAL(Status,&quot;Scheduled&quot;)
)
, False)</errorConditionFormula>
        <errorMessage>You cannot change Work Order Status to previous state.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_Cannot_Convert_Case_Again</fullName>
        <active>true</active>
        <description>You cannot have two work orders under the same case.</description>
        <errorConditionFormula>IF($Setup.ValidationRulesSettings__c.WorkOrderValidationsetting__c,
(NOT(ISBLANK( CaseId )) &amp;&amp;
Case.Work_Order_Count__c &gt; 1), False)</errorConditionFormula>
        <errorMessage>You cannot have two work orders under the same case.</errorMessage>
    </validationRules>
</CustomObject>